# Impact-of-Preprocessing

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.py
Preprocessing/ClassicMethods/: README.md  histogram_equalization.py
Preprocessing/NeuralNetworkMethods/: README.md
UNet/: data_module.py  double_conv.py  lung_dataset.py  unet.py  unet_model.py
UNet/Network/: double_conv.py  unet.py
UNet/architecture/: unet.py
common/: data_manipulation.py  data_module.py  decorators.py  image_transforms.py  model_inference.py  noise_transforms.py  utils.py  visualization.py
common/configs/: config.py  dae_config.py  preprocessing_net_config.py  unet_config.py
configs/: dae_config.yaml  noise_transforms_config.yaml  preprocessing_net_config.yaml  standard_preprocessing_config.yaml  unet_config.yaml
preprocessing/classic_methods/: histogram_equalization.py
preprocessing/neural_network_methods/: data_module.py  dataset.py  main.py  model.py  model_inference.py  model_ops.py
preprocessing/neural_network_methods/DAE/: README.md  dae_dataset.py  dae_model.py  data_module.py  dataset.py  denoising_autoencoder.py  model.py  model_inference.py
preprocessing/neural_network_methods/DAE/architecture/: denoising_autoencoder.py
preprocessing/neural_network_methods/DnCNN/: data_module.py  dataset.py  dncnn.py  model.py  model_inference.py
preprocessing/neural_network_methods/DnCNN/architecture/: dncnn.py
preprocessing/neural_networks/: dae.py  data_module.py  dataset.py  dncnn.py  model.py  model_inference.py  model_ops.py  vae.py
preprocessing/standard_methods/: standart_preprocessing.py
statistics_methods/: statistics.py
test/: test.py
tests/: tests.py
unet/: data_module.py  dataset.py  lung_dataset.py  model.py  model_inference.py  model_ops.py  unet.py
unet/architecture/: unet.py
utils/: configs.py
