[tool.poetry]
name = "impact-of-preprocessing"
version = "0.1.0"
description = ""
authors = ["Milan Gittler <gittlermilan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
]

torchaudio = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
]

torchvision = [ 
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
]
lightning = "^2.1.3"
plotly = "^5.18.0"
pillow = "^10.2.0"
pandas = "^2.1.4"
tensorboard = "^2.15.1"
pydantic = "^2.5.3"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80
target-version = ['py311']

[tool.ruff]
line-length = 80