[tool.poetry]
name = "impact-of-preprocessing"
version = "0.1.0"
description = ""
authors = ["Milan Gittler <gittlermilan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
torch = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
]

torchaudio = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
]

torchvision = [ 
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
]
lightning = "^2.1.3"
pillow = "^10.2.0"
pandas = "^2.1.4"
pydantic = "^2.5.3"
opencv-python = "^4.9.0.80"
torchmetrics = "^1.3.0.post0"
matplotlib = "^3.8.3"
mlflow = "^2.10.2"
scikit-image = "^0.22.0"
rich = "^13.7.1"
pywavelets = "^1.6.0"
numba = "^0.59.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
